# pyapp-template

./: .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
