[project]
name = "pyapp"
version = "0.1.0"
description = "Template for a Python app project"
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
]

[dependency-groups]
dev = ["pre-commit==4.2.*"]
test = ["pytest==8.3.*"]
lint = [
    "mypy==1.15.*",
    "ruff==0.11.*",
]

[project.scripts]
pyapp = "pyapp.__main__:main"

[project.urls]
Homepage = "https://github.com/SamWarden/pyapp-template"
Repository = "https://github.com/SamWarden/pyapp-template"
Issues = "https://github.com/SamWarden/pyapp-template/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
